--- a/client/issue-reports/issue-report.html
+++ b/client/issue-reports/issue-report.html
@@ -1,7 +1,7 @@
 <div flex layout="row" layout-align="center">
 
-  <div flex-xs="100" layout="column" layout-align="center">
-    <span class="md-subhead">Issue Report</span>
+  <div flex-xs="100" layout="column" layout-align="center" class="md-padding">
+    <span class="md-subhead">Issue Tracker</span>
     <div  flex-xs="100" layout="column" layout-align="center center" class="md-padding"
           style="margin: 5px 0; background-color: whitesmoke; border: solid thin whitesmoke; border-radius: 5px;">
       <div ng-if="msgStatus == 0">
