--- a/client/issue-reports/issue-report.html
+++ b/client/issue-reports/issue-report.html
@@ -3,7 +3,7 @@
   <div flex-xs="100" layout="column" layout-align="center" class="md-padding">
     <span class="md-subhead">Issue Tracker</span>
     <div  flex-xs="100" layout="column" layout-align="center center" class="md-padding"
-          style="margin: 5px 0; background-color: whitesmoke; border: solid thin whitesmoke; border-radius: 5px;">
+          style="margin: 5px 0; background-color: whitesmoke; border: solid thin whitesmoke; border-radius: 5px; min-height:280px;">
       <div ng-if="msgStatus == 0">
         <form layout="column" name="reportIssueForm"
               ng-submit="report(update.issue,issue.comments)">
