--- a/client/dashboard/dashboard.html
+++ b/client/dashboard/dashboard.html
@@ -57,8 +57,10 @@
           <md-progress-circular class="md-hue-4" md-mode="indeterminate">
           </md-progress-circular>
         </div>
-        <div ng-if="!statusCurrent && msgStatus==0">
+        <div ng-if="!statusCurrent && msgStatus==0 && msgStatus !=2">
           <md-checkbox ng-model="status" ng-change="createConfirmation()">I have successfully installed this update.</md-checkbox>
+        </div>
+        <div ng-if="msgStatus == 2">
         </div>
         <div ng-if="msgStatus==1">
           <span class="md-body-1">Your confirmation has been saved!</span>
