3rd push to azure

--- a/client/dashboard/dashboard.html
+++ b/client/dashboard/dashboard.html
@@ -57,7 +57,7 @@
           <md-progress-circular class="md-hue-4" md-mode="indeterminate">
           </md-progress-circular>
         </div>
-        <div ng-if="!statusCurrent && msgStatus == 0 && msgShow == 2 ">Member Only</div>
+        <div ng-if="!statusCurrent && msgStatus == 0 && msgShow == 2 "></div>
         <div ng-if="!statusCurrent && msgStatus == 0 && msgShow != 2">
           <md-checkbox ng-model="status" ng-change="createConfirmation()">I have successfully installed this update.</md-checkbox>
         </div>
