--- a/client/issue-reports/issue-report.html
+++ b/client/issue-reports/issue-report.html
@@ -1,9 +1,8 @@
 <div flex layout="row" layout-align="center">
 
   <div flex-xs="100" layout="column" layout-align="center" class="md-padding">
-    <span class="md-subhead">Issue Tracker</span>
-    <div  flex-xs="100" layout="column" layout-align="center center" class="md-padding"
-          style="margin: 5px 0; background-color: whitesmoke; border: solid thin whitesmoke; border-radius: 5px; min-height:280px;">
+    <h6 class="md-subhead title">Issue Tracker</h6>
+    <div  flex-xs="100" layout="column" layout-align="center center" class="md-padding" id="issue-form-background">
       <div ng-if="msgStatus == 0">
         <form layout="column" name="reportIssueForm"
               ng-submit="report(update.issue,issue.comments)">
